feat: add try-catch in doPost method MatchScoreServlet